# voxai

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  audio_setup_calls.md  pyproject.toml  setup.py  setup_audio_macos.md  test_gem.py  volume_control_setup.md
backend/: cli.py  core.py
docs/: api_reference.rst  conf.py  configuration.rst  developer_guide.rst  features.rst  getting_started.rst  how_it_works.rst  index.rst  license.rst  quickstart.rst  usage.rst
electron/: index.html  main.js  package.json
voxai/: cli.py  config.py  core.py
voxai/electron/: index.html  main.js  package.json  preload.js
