[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxai"
version = "0.4.0"
description = "Voice-driven AI assistant with OpenAI GPT-4o integration, interview-style responses, and enhanced UI."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ravi (Robbie) Tiwari", email = "rtiwariops@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "sounddevice",
    "faster_whisper",
    "openai",
    "python-dotenv"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/rtiwariops/voxai"
Documentation = "https://voxai.readthedocs.io/"
Repository = "https://github.com/rtiwariops/voxai"
"Bug Tracker" = "https://github.com/rtiwariops/voxai/issues"

[project.scripts]
voxai = "voxai.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["voxai*"]

[tool.setuptools.package-data]
voxai = [
    "electron/package.json",
    "electron/main.js",
    "electron/preload.js", 
    "electron/index.html",
    "electron/icon.png",
]